# ophion

./: .gitignore  Cargo.toml  LICENSE  README.md  compare.csv  compare_full.csv  sweep.csv
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs  report.rs  sweep.rs
crates/engine/: Cargo.toml
crates/engine/benches/: engine_bench.rs
crates/engine/src/: accounting.rs  engine.rs  lib.rs
crates/engine/tests/: determinism.rs  mm_inventory_bound.rs  predictor_r2.rs  taker_sharpe.rs
crates/feed/: Cargo.toml
crates/feed/src/: lib.rs  synthetic.rs  tick.rs
crates/lob/: Cargo.toml
crates/lob/benches/: lob_bench.rs
crates/lob/proptest-regressions/: tests.txt
crates/lob/src/: error.rs  lib.rs  order_book.rs  tests.rs  types.rs
crates/signal/: Cargo.toml
crates/signal/benches/: signal_bench.rs
crates/signal/src/: ewma.rs  features.rs  lib.rs  ofi.rs  predictor.rs
crates/signal/tests/: ofi_sanity.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs  market_maker.rs  noop.rs  taker.rs  traits.rs
scripts/: check.sh  plot_sweep.py
