[package]
name        = "engine"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
lob         = { path = "../lob" }
feed        = { path = "../feed" }
signal      = { path = "../signal" }
strategy    = { path = "../strategy" }
analytics   = { path = "../analytics" }
sha2        = { workspace = true }
thiserror   = { workspace = true }
csv         = { workspace = true }
serde       = { workspace = true }

[[bin]]
name = "ophion"
path = "src/bin/ophion.rs"

[[bin]]
name = "sweep"
path = "src/bin/sweep.rs"

[dev-dependencies]
sha2        = { workspace = true }
