[package]
name        = "signal"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
lob         = { path = "../lob" }
thiserror   = { workspace = true }

[dev-dependencies]
criterion   = { workspace = true }

[[bench]]
name    = "signal_bench"
harness = false
